--- a/src/app/user-general/user-details/user-details.component.html
+++ b/src/app/user-general/user-details/user-details.component.html
@@ -4,7 +4,7 @@
       <div class="form-group">
         <label for="sNamUser">Nome</label>
         <input type="text" class="form-control" id="sNamUser" required
-        [(ngModel)]="user.sNamUser" name="sNamUser">
+        [(ngModel)]="user.sNamUser" name="sNamUser" value="{{!user.sNamUser}}" >
       </div>
       
       <div class="form-group">
@@ -17,12 +17,6 @@
         <label for="sPasUser">Senha</label>
         <input type="password" class="form-control" id="sPasUser" required
         [(ngModel)]="user.sPasUser" name="sPasUser">
-      </div>
-            
-       <div class="form-group">
-        <label for="dBirUser">Ano de Nascimento</label>
-        <input type="datetime" class="form-control" id="dBirUser" required
-        [(ngModel)]="user.dBirUser" name="dBirUser">
       </div>
       
       <div class="btn-group">
