--- a/src/app/course-general/create-course/create-course.component.html
+++ b/src/app/course-general/create-course/create-course.component.html
@@ -48,17 +48,17 @@
             <div class="navbar-collapse collapse" id="main-navigation">
                 <!-- Main Menu -->
                 <ul class="navbar-nav">
-                    <li class="nav-item has-menu"><a href="#" class="nav-link">Cursos</a>
+                    <li class="nav-item has-menu"><a href="/#" class="nav-link">Cursos</a>
                         <div class="sub-menu">
                             <!-- Sub Menu -->
                             <ul class="menu-list">
-                                <li><a href="user/course/add" routerLink="course/add" class="btn btn-primary btn-sm"
+                                <li><a href="user/course/add" routerLink="../../../user/course/add" class="btn btn-primary btn-sm"
                                         role="button" routerLinkActive="active">Criar Curso</a></li>
-                                <li><a href="user/course/update" routerLink="course/update" role="button"
+                                <li><a href="user/course/update" routerLink="../../../user/course/update" role="button"
                                         routerLinkActive="active">Editar Curso</a></li>
-                                <li><a href="user/course/remove" routerLink="course/remove" role="button"
+                                <li><a href="user/course/remove" routerLink="../../../user/course/remove" role="button"
                                         routerLinkActive="active">Excluir Curso</a></li>
-                                <li><a href="user/course/list/all" routerLink="course/list/all" role="button"
+                                <li><a href="user/course/list/all" routerLink="../../../user/course/list/all" role="button"
                                         routerLinkActive="active">Visualizar Cursos</a></li>
                             </ul>
                         </div>
@@ -67,13 +67,13 @@
                         <div class="sub-menu">
                             <!-- Sub Menu -->
                             <ul class="menu-list">
-                                <li><a href="user/activity/add" routerLink="activity/add" class="btn btn-primary btn-sm"
+                                <li><a href="user/activity/add" routerLink="../../../user/activity/add" class="btn btn-primary btn-sm"
                                         role="button" routerLinkActive="active">Criar Atividade</a></li>
-                                <li><a href="user/activity/update" routerLink="activity/update" role="button"
+                                <li><a href="user/activity/update" routerLink="../../../user/activity/update" role="button"
                                         routerLinkActive="active">Editar Atividade</a></li>
-                                <li><a href="user/activity/remove" routerLink="activity/remove" role="button"
+                                <li><a href="user/activity/remove" routerLink="../../../user/activity/remove" role="button"
                                         routerLinkActive="active">Excluir Atividade</a></li>
-                                <li><a href="user/activity/list/all" routerLink="activity/list/all" role="button"
+                                <li><a href="user/activity/list/all" routerLink="../../../user/activity/list/all" role="button"
                                         routerLinkActive="active">Visualizar Atividades</a></li>
                             </ul>
                         </div>
@@ -82,13 +82,13 @@
                         <div class="sub-menu">
                             <!-- Sub Menu -->
                             <ul class="menu-list">
-                                <li><a href="user/group/add" routerLink="grouo/add" class="btn btn-primary btn-sm" role="button"
+                                <li><a href="user/group/add" routerLink="../../../user/group/add" class="btn btn-primary btn-sm" role="button"
                                         routerLinkActive="active">Criar Grupo</a></li>
-                                <li><a href="user/group/update" routerLink="group/update" role="button"
+                                <li><a href="user/group/update" routerLink="../../../user/group/update" role="button"
                                         routerLinkActive="active">Editar Grupo</a></li>
-                                <li><a href="user/group/remove" routerLink="group/remove" role="button"
+                                <li><a href="user/group/remove" routerLink="../../../user/group/remove" role="button"
                                         routerLinkActive="active">Excluir Grupo</a></li>
-                                <li><a href="user/group/list/all" routerLink="group/list/all" role="button"
+                                <li><a href="user/group/list/all" routerLink="../../../user/group/list/all" role="button"
                                         routerLinkActive="active">Visualizar Grupos</a></li>
                             </ul>
                         </div>
@@ -97,7 +97,7 @@
                         <div class="sub-menu">
                             <!-- Sub Menu -->
                             <ul class="menu-list">
-                                <li><a href="user/update" routerLink="user/upate" role="button" routerLinkActive="active">Editar
+                                <li><a href="user/update" routerLink="../../../user/user/upate" role="button" routerLinkActive="active">Editar
                                         Perfil</a></li>
                             </ul>
                         </div>
@@ -119,7 +119,7 @@
     <div class="container">
         <h1 class="heading">Curso</h1>
         <ul class="breadcrumb">
-            <li class="breadcrumb-item"><a href="user/">User</a></li>
+            <li class="breadcrumb-item"><a href="../../../user">User</a></li>
             <li class="breadcrumb-item active"><a href="#">Curso</a></li>
         </ul>
     </div>
@@ -127,7 +127,7 @@
 
 <div class="row">
     <div class="form-container col-lg-12">
-        <section class="data-container pl-5">  
+        <section class="container mt-100">  
             <h2 class="heading">Novo <span class="text-primary">Curso</span></h2>
             <form class="mb-5">
                 <div class="form-group row col-lg-6">
@@ -141,7 +141,7 @@
                 <div class="form-group row col-lg-6">
                     <label for="horas">Horas</label>
                     <span style="color: red;">*</span>
-                    <input type="number" class="form-control" id="fHorCou" required [(ngModel)]="hours" name="fHorCou">
+                    <input type="text" class="form-control" id="fHorCou" required [(ngModel)]="hours" name="fHorCou">
                     <span style="color: red;" *ngIf="showHoursRequiredError">Horas é obrigatório.</span>
                 </div>
 
@@ -168,7 +168,7 @@
                         class="form-control" required>
                         <option selected value="null">Selecione uma opção...</option>
                         <option value="1">SAP</option>
-                        <option value="2">Oracle</option>
+                        <option value="2">Totvs!</option>
                     </select>
                     <span *ngIf="showCategoryRequiredError" style="color: red;">Categoria é obrigatório.</span>
                 </div>
