--- a/src/app/course-general/list-group/list-group.component.html
+++ b/src/app/course-general/list-group/list-group.component.html
@@ -1,13 +1,16 @@
 
-  <header class="header-1">            <!-- Header = Topbar + Navigation Bar -->
+  <header class="header-1">
+    <!-- Header = Topbar + Navigation Bar -->
     <div class="topbar-wrapper">
-        <div class="container">            <!-- Dark Blue Topbar -->
+        <div class="container">
+            <!-- Dark Blue Topbar -->
             <div class="topbar">
                 <div>
-                            <!-- Change Topbar Contact Number here -->
+                    <!-- Change Topbar Contact Number here -->
                 </div>
                 <div>
-                    <ul class="topbar-widgets">         <!-- Topbar Widgets - Cart, Language Select & Login Signup -->
+                    <ul class="topbar-widgets">
+                        <!-- Topbar Widgets - Cart, Language Select & Login Signup -->
                         <li>
                             <span data-toggle="modal" data-target="#cart-modal">
                                 <i class="fa fa-shopping-cart"></i>
@@ -20,7 +23,7 @@
                         </li>
                         <li>
                             <span data-toggle="modal" data-target="#login-modal">
-                                Login/Sign up
+                                {{currentUser.sLogUser}}
                             </span>
                         </li>
                     </ul>
@@ -29,180 +32,74 @@
         </div>
     </div>
 
-    <nav class="navbar navbar-expand-lg">         <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg">
+        <!-- Navigation Bar -->
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="../assets/resources/images/logo.png" alt="">          <!-- Replace with your Logo -->
+                <img src="../assets/resources/images/logo.png" alt=""> <!-- Replace with your Logo -->
             </a>
 
-            <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-navigation" aria-expanded="false">
+            <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-navigation"
+                aria-expanded="false">
                 <span class="navbar-toggler-icon">
-                    <i class="fa fa-bars"></i>          <!-- Mobile Navigation Toggler Icon -->
+                    <i class="fa fa-bars"></i> <!-- Mobile Navigation Toggler Icon -->
                 </span>
             </button>
 
-            <div class="navbar-collapse collapse" id="main-navigation">         <!-- Main Menu -->
+            <div class="navbar-collapse collapse" id="main-navigation">
+                <!-- Main Menu -->
                 <ul class="navbar-nav">
-                    <li class="nav-item has-menu"><a href="#" class="nav-link">Home</a>
-                        <div class="sub-menu">          <!-- Sub Menu -->
+                    <li class="nav-item has-menu"><a href="#" class="nav-link">Cursos</a>
+                        <div class="sub-menu">
+                            <!-- Sub Menu -->
                             <ul class="menu-list">
-                                <li><a href="user/course/add" routerLink="course/add" class="btn btn-primary btn-sm" role="button" routerLinkActive="active">Criar Curso</a></li>
-                                <li><a href="index-1.html">Home Style 2</a></li>
-                                <li><a href="index-2.html">Home Style 3</a></li>
-                                <li><a href="index-3.html">Home Style 4</a></li>
-                                <li><a href="index-shop.html">Home eShop</a></li>
+                                <li><a href="user/course/add" routerLink="../../../user/course/add" class="btn btn-primary btn-sm"
+                                        role="button" routerLinkActive="active">Criar Curso</a></li>
+                                <li><a href="user/course/update" routerLink="../../../user/course/update" role="button"
+                                        routerLinkActive="active">Editar Curso</a></li>
+                                <li><a href="user/course/remove" routerLink="../../../user/course/remove" role="button"
+                                        routerLinkActive="active">Excluir Curso</a></li>
+                                <li><a href="user/course/list/all" routerLink="../../../user/course/list/all" role="button"
+                                        routerLinkActive="active">Visualizar Cursos</a></li>
                             </ul>
                         </div>
                     </li>
-                    <li class="nav-item has-menu"><a href="#" class="nav-link">Pages</a>
-                        <div class="mega-menu">          <!-- Mega Menu -->
-                            <div class="container-fluid nop">
-                                <div class="row">
-                                    <div class="col-lg-3">
-                                        <ul class="menu-list">
-                                            <li class="list-heading">Courses</li>
-                                            <li><a href="course-categories.html">Categories</a></li>
-                                            <li><a href="course-grid.html">Course Grid</a></li>
-                                            <li><a href="course-list.html">Course List</a></li>
-                                            <li><a href="course-detail.html">Course Detail</a></li>
-                                            <li class="list-heading">Teachers</li>
-                                            <li><a href="teachers.html">Teacher Grid</a></li>
-                                            <li><a href="teacher-detail.html">Teacher Detail</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <ul class="menu-list">
-                                            <li class="list-heading">About</li>
-                                            <li><a href="about.html">About</a></li>
-                                            <li><a href="history.html">History</a></li>
-                                            <li><a href="code-of-conduct.html">Code Of Conduct</a></li>
-                                            <li><a href="star-kids.html">Star Kids</a></li>
-                                            <li><a href="testimonials.html">Testimonials</a></li>
-                                            <li><a href="team.html">Team</a></li>
-                                            <li><a href="pricing-tables.html">Pricing</a></li>
-                                            <li><a href="contact.html">Contact</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <ul class="menu-list">
-                                            <li class="list-heading">Gallery</li>
-                                            <li><a href="albums.html">Photo Albums</a></li>
-                                            <li><a href="album-single.html">Single Album</a></li>
-                                            <li class="list-heading">Admission</li>
-                                            <li><a href="admission-process.html">Admission Process</a></li>
-                                            <li><a href="admission-form.html">Admission Form</a></li>
-                                            <li><a href="admission-success.html">Admission Success</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <ul class="menu-list">
-                                            <li class="list-heading">Events</li>
-                                            <li><a href="events.html">Event Grid</a></li>
-                                            <li><a href="event-details.html">Event Detail</a></li>
-                                            <li class="list-heading">Careers</li>
-                                            <li><a href="jobs.html">Jobs</a></li>
-                                            <li><a href="job-detail.html">Job Single</a></li>
-                                            <li class="list-heading">Miscellaneous</li>
-                                            <li><a href="coming-soon.html">Coming Soon</a></li>
-                                            <li><a href="not-found.html">404 Not Found</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="nav-item has-menu"><a href="#" class="nav-link">Shop</a>
-                        <div class="sub-menu">          <!-- Sub Menu -->
+                    <li class="nav-item has-menu"><a href="#" class="nav-link">Atividades</a>
+                        <div class="sub-menu">
+                            <!-- Sub Menu -->
                             <ul class="menu-list">
-                                <li class="has-menu"><a href="#"> Product</a>
-                                    <div class="sub-menu">          <!-- Sub Sub Menu -->
-                                        <ul class="menu-list">
-                                            <li><a href="product-categories.html">Product Categories</a></li>
-                                            <li><a href="product-grid.html">Product Grid</a></li>
-                                            <li><a href="product-detail.html">Product Detail</a></li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li class="has-menu"><a href="#">Cart</a>
-                                    <div class="sub-menu">          <!-- Sub Sub Menu -->
-                                        <ul class="menu-list">
-                                            <li><a href="cart.html">Cart</a></li>
-                                            <li><a href="cart-empty.html">Cart Empty</a></li>
-                                            <li><a href="cart-success.html">Cart Success</a></li>
-                                            <li><a href="checkout.html">Checkout</a></li>
-                                            <li><a href="wishlist.html">Wishlist</a></li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li class="has-menu"><a href="#">Account </a>
-                                    <div class="sub-menu">          <!-- Sub Sub Menu -->
-                                        <ul class="menu-list">
-                                            <li><a href="login-signup.html">Login / Signup</a></li>
-                                            <li><a href="forgot-password.html">Forgot Password</a></li>
-                                            <li><a href="change-password.html">Change Password</a></li>
-                                        </ul>               
-                                    </div>                 
-                                </li>                            
+                                <li><a href="user/activity/add" routerLink="../../../user/activity/add" class="btn btn-primary btn-sm"
+                                        role="button" routerLinkActive="active">Criar Atividade</a></li>
+                                <li><a href="user/activity/update" routerLink="../../../user/activity/update" role="button"
+                                        routerLinkActive="active">Editar Atividade</a></li>
+                                <li><a href="user/activity/remove" routerLink="../../../user/activity/remove" role="button"
+                                        routerLinkActive="active">Excluir Atividade</a></li>
+                                <li><a href="user/activity/list/all" routerLink="../../../user/activity/list/all" role="button"
+                                        routerLinkActive="active">Visualizar Atividades</a></li>
                             </ul>
                         </div>
                     </li>
-                    <li class="nav-item has-menu"><a href="#" class="nav-link">Elements</a>
-                        <div class="mega-menu">         <!-- Mega Menu -->
-                            <div class="container-fluid nop">
-                                <div class="row">
-                                    <div class="col-lg-3">
-                                        <ul class="menu-list">
-                                            <li class="list-heading">Components</li>
-                                            <li><a href="accordion.html">Accordion</a></li>
-                                            <li><a href="alerts.html">Alerts</a></li>
-                                            <li><a href="badges.html">Badges</a></li>
-                                            <li><a href="blockquotes.html">Blockquotes</a></li>
-                                            <li><a href="buttons.html">Buttons</a></li>
-                                            <li><a href="cards.html">Cards</a></li>
-                                            <li><a href="carousel.html">Carousel</a></li>
-                                            <li><a href="forms.html">Forms</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <ul class="menu-list">
-                                            <li class="list-heading">&nbsp;</li>
-                                            <li><a href="headings.html">Headings</a></li>
-                                            <li><a href="lists.html">Lists</a></li>
-                                            <li><a href="modals.html">Modals</a></li>
-                                            <li><a href="progress-bars.html">Progress Bars</a></li>
-                                            <li><a href="tables.html">Tables</a></li>
-                                            <li><a href="tabs.html">Tabs</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <ul class="menu-list">
-                                            <li class="list-heading">Custom Utilities</li>
-                                            <li><a href="call-to-action.html">Call To action</a></li>
-                                            <li><a href="counters.html">Counters</a></li>
-                                            <li><a href="google-map.html">Google Maps</a></li>
-                                            <li><a href="icon-boxes.html">Icon Boxes</a></li>
-                                            <li><a href="social-media.html">Social Media</a></li>
-                                            <li><a href="video.html">Video</a></li>
-                                            <li><a href="text-sections.html">Text Sections</a></li>
-                                            <li><a href="blank.html">Blank Page</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-lg-3 d-none d-lg-block" style="background: url('../assets/resources/images/img-general-3.png') no-repeat bottom / 110%;">
-                                    </div>
-                                </div>
-                            </div>
+                    <li class="nav-item has-menu"><a href="#" class="nav-link">Grupos</a>
+                        <div class="sub-menu">
+                            <!-- Sub Menu -->
+                            <ul class="menu-list">
+                                <li><a href="user/group/add" routerLink="../../../user/group/add" class="btn btn-primary btn-sm" role="button"
+                                        routerLinkActive="active">Criar Grupo</a></li>
+                                <li><a href="user/group/update" routerLink="../../../user/group/update" role="button"
+                                        routerLinkActive="active">Editar Grupo</a></li>
+                                <li><a href="user/group/remove" routerLink="../../../user/group/remove" role="button"
+                                        routerLinkActive="active">Excluir Grupo</a></li>
+                                <li><a href="user/group/list/all" routerLink="../../../user/group/list/all" role="button"
+                                        routerLinkActive="active">Visualizar Grupos</a></li>
+                            </ul>
                         </div>
                     </li>
-                    <li class="nav-item has-menu"><a href="#" class="nav-link">Blog</a>
-                        <div class="sub-menu">          <!-- Sub Menu -->
+                    <li class="nav-item has-menu"><a href="#" class="nav-link">Perfil</a>
+                        <div class="sub-menu">
+                            <!-- Sub Menu -->
                             <ul class="menu-list">
-                                <li><a href="blog-grid-left-sidebar.html">Blog Grid Left Sidebar</a></li>
-                                <li><a href="blog-grid-right-sidebar.html">Blog Grid Right Sidebar</a></li>
-                                <li><a href="blog-list-left-sidebar.html">Blog List Left Sidebar</a></li>
-                                <li><a href="blog-list-right-sidebar.html">Blog List Right Sidebar</a></li>
-                                <li><a href="blog-single-left-sidebar.html">Blog Single Left Sidebar</a></li>
-                                <li><a href="blog-single-right-sidebar.html">Blog Single Right Sidebar</a></li>
-                                <li><a href="blog-masonry.html">Blog Masonry </a></li> 
+                                <li><a href="user/update" routerLink="../../../user/user/upate" role="button" routerLinkActive="active">Editar
+                                        Perfil</a></li>
                             </ul>
                         </div>
                     </li>
@@ -212,11 +109,18 @@
     </nav>
 </header>
 
+<!-- Slider Revolution -->
+<div class="rev_slider_wrapper fullwidthbanner-container">
+    <div id="slider" class="rev_slider fullwidthbanner" data-version="5.0.7">
+    </div>
+</div>
+<!-- Revolution Slider Ends -->
+
 <section class="page-header">
     <div class="container">
         <h1 class="heading">Lista de Grupo</h1>
         <ul class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item"><a href="../../../user">User</a></li>
             <li class="breadcrumb-item active"><a href="#">Grupos</a></li>
         </ul>
     </div>
