--- a/src/app/course-general/list-activity/list-activity.component.html
+++ b/src/app/course-general/list-activity/list-activity.component.html
@@ -169,37 +169,20 @@
 
 <section class="container mt-60 mb-100">
     <div class="row">
-        <a *ngFor="let course of courses | paginate: { itemsPerPage: 6, currentPage: pageNumber, totalItems: courses.length } | searchPipe: searchTerm; let i = index" class="col-lg-4">
-            <button class="btn btn-primary" (click)="addCourse(course.iCodCou)">  
-                <div class="card course-card new">
-                    <div *ngIf="i == 0" class="course-head">
-                        <img src="../assets/resources/images/grid_sap.jpg" class="img-fluid course-img" alt="">
-                        <a [routerLink]="['/dinamic/course/', course.iCodCou]" class="course-link"><i class="fa fa-link"
+        <a *ngFor="let activity of activities | paginate: { itemsPerPage: 6, currentPage: pageNumber, totalItems: activities.length } | searchPipe: searchTerm; let i = index" class="col-lg-4" [routerLink]="['detail/course/', activity.iCodAct]">
+            <div class="card course-card new">
+                <div class="course-head">
+                        <img src="../assets/resources/images/course-grid_oracle.jpg" class="img-fluid course-img" alt="">
+                        <a [routerLink]="['user/', activity.iCodAct]" class="course-link"><i class="fa fa-link"
                                 aria-hidden="true"></i></a>
                     </div>
-                    <div *ngIf="i > 0" class="course-head">
-                        <img src="../assets/resources/images/grid_sap.jpg" class="img-fluid course-img" alt="">
-                        <a [routerLink]="['user/', course.iCodCou]" class="course-link"><i class="fa fa-link"
-                                aria-hidden="true"></i></a>
-                    </div>
-                    <div *ngIf="course.category.sNamCat == 'ORACLE'" class="course-head">
-                            <img src="../assets/resources/images/course-grid_oracle.jpg" class="img-fluid course-img" alt="">
-                            <a [routerLink]="['user/', course.iCodCou]" class="course-link"><i class="fa fa-link"
-                                    aria-hidden="true"></i></a>
-                        </div>
-                    <div class="course-detail">
-                        <h4 class="heading">{{course.sNamCou}}</h4>
-                        <h5 class="brief">Valor total do curso de nível {{course.sDifCou}} R$ {{course.fPriCou}}</h5>
-                        <ul class="course-features">
-                            <li><i class="fa fa-map-marker"></i>{{course.category.sNamCat}}</li>
-                            <!-- <li><i class="fa fa-map-marker"></i>{{course.sStaCou}}</li> -->
-                            <li><i class="fa fa-map-marker"></i>{{course.sDifCou}}</li>
-                            <!-- <li><i class="fa fa-clock-o"></i>{{course.dDatCou}}</li> -->
-                            <li><i class="fa fa-clock-o"></i> {{course.fHorCou}}</li>
-                        </ul>
-                    </div>
+                <div class="course-detail">
+                    <h4 class="heading">{{activity.sNamAct}}</h4>
+                    <ul class="course-features">
+                        <li><i class="fa fa-map-marker"></i>{{activity.sDesAct}}</li>
+                    </ul>
                 </div>
-            </button>
+            </div>
         </a>
     </div>
     <div class="row mt-20">
